--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,22 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  password: <%= ENV.fetch('POSTGRES_PASSWORD') { '' } %>
+  username: <%= ENV.fetch('POSTGRES_USERNAME') { 'root' } %>
+  port: <%= ENV.fetch('POSTGRES_PORT') { 5432 } %>
+  host: <%= ENV.fetch('POSTGRES_HOST') { '127.0.0.1' } %>
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: <%= ENV.fetch('POSTGRES_DATABASE') { 'weather_api_development' } %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: <%= ENV.fetch('POSTGRES_DATABASE') { 'weather_api_test' } %>
 
 production:
   <<: *default
-  database: storage/production.sqlite3
+  database: weather_api_production
+  username: weather_api
+  password: <%= ENV['WEATHER_API_DATABASE_PASSWORD'] %>
